# privy

./: .gitignore  .gitmodules  Anchor.toml  Cargo.toml  Dockerfile  README.md  TODO.md  privy-keypair.json
frontend/: README.md  next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/css/containers/: Table.module.css
frontend/css/input/: Switch.module.css
frontend/pages/: [username].tsx  _app.tsx  _document.tsx  index.tsx
frontend/pages/api/: getDecryptedCategories.ts  getDecryptedMessages.ts  getEncryptedCategories.ts  getEncryptedMessage.ts  getSaltAndKeys.ts  test-encryption.ts  test.ts
frontend/pages/categories/: index.tsx
frontend/pages/fruits/: index.tsx
frontend/pages/home/: index.tsx
frontend/pages/messages/: index.tsx
frontend/pages/profile/: index.tsx
frontend/patches/: zlib+1.0.5.patch
grpc-node-client/: index.js  package-lock.json  package.json
grpc-server/: .env.example  Cargo.toml  Dockerfile  build.rs  diesel.toml
grpc-server/migrations/2024-06-15-063646_create_usernames/: up.sql
grpc-server/migrations/2024-07-11-165540_fingerprints/: up.sql
grpc-server/migrations/2024-07-20-065413_usernames_secret/: down.sql  up.sql
grpc-server/migrations/2024-08-03-073447_updated_users/: up.sql
grpc-server/proto/: privy.proto
grpc-server/src/: main.rs
grpc-server/src/db/: db.rs  mod.rs  models.rs  schema.rs  service.rs
grpc-server/src/encryption/: service.rs
grpc-server/src/solana/: client.rs
grpc-server/tests/: index.js  package-lock.json
pages/fruits/: index.tsx
program/: Anchor.toml  README.md  package.json
program/tests/: instructions.ts  privy.ts  state.ts  utils.ts
programs/privy/: Cargo.toml
sdk/: README.md  package.json  test.ts  tsconfig.json
sdk/lib/: index.d.ts  index.js  test.js
sdk/program/: PrivySdk.ts  index.ts
sdk/types/: privy.ts
sdk/utils/: asymmetric.ts  helpers.ts
server/: README.md
server/src/: main.rs
server/tests/: index.js  package.json
tests/: privy.ts
(+78 files in other folders)
