[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
prost = "0.12.6"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
anchor-client = { version = "0.30.0 ", features = ["async"] }

[dependencies.diesel_migrations]
version = "2.2.0"
features = ["postgres"]

[build-dependencies]
tonic-build = "0.11.0"
