[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
prost = "0.12.6"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
anchor-client = { version = "0.30.0 ", features = ["async"] }
privy = { path = "../program/programs/privy", features = ["no-entrypoint"] }
serde = "1.0.203"
serde_json = "1.0.120"
flate2 = "1.0"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
base64 = "0.13"
brotli = "3.3.4"

[dependencies.diesel_migrations]
version = "2.2.0"
features = ["postgres"]

[build-dependencies]
tonic-build = "0.11.0"
