[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
anchor-client = { version = "0.30.0 ", features = ["async"] }
privy = { path = "../program/programs/privy", features = ["no-entrypoint"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
flate2 = "1.0"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
base64 = "0.13"
brotli = "3.3.4"
actix-web = "4.4.0"
actix-cors = "0.6.4"

[dependencies.diesel_migrations]
version = "2.2.0"
features = ["postgres"]

[profile.dev]
incremental = true